--- a/src/main/resources/public/css/eventos.css
+++ b/src/main/resources/public/css/eventos.css
@@ -123,3 +123,26 @@ button:hover {
 .evento.general{
     display: none;
 }
+
+#inicio {
+    display: block;
+    width: fit-content;
+    margin: 3em auto;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* para quitar las flechitas */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
+/* input[type=number] {
+  -moz-appearance: textfield;
+} */
