WIP: Ahora la ui si refleja el estado de las sillas. Falta ahora el flujo de compra

--- a/src/main/resources/views/trova.html
+++ b/src/main/resources/views/trova.html
@@ -1,57 +1,78 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title th:text="${evento.nombre}"></title>
-        <link rel="stylesheet" th:href="@{/css/trova.css}">
-    </head>
-    <body>
-        <div class="centrar">
-            <noscript>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="${evento.nombre}"></title>
+    <link rel="stylesheet" th:href="@{/css/trova.css}">
+</head>
+<body>
+    <div class="centrar">
+        <noscript>
             <p style="text-align: center; color: red;">Este sitio requiere JavaScript para funcionar correctamente.</p>
-            </noscript>
+        </noscript>
 
-            <h1 th:text="${evento.nombre}"></h1>
+        <h1 th:text="${evento.nombre}"></h1>
 
-            <div class="main-container">
-                <div class="general izq">
-                    <h2 style="grid-column: 1 / -1; text-align: center;">General Izquierda</h2>
-                </div>
+        <table id="tablaPrecios">
+            <thead>
+            <tr>
+                <th>Tipo de Mesa</th>
+                <th>Precio</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
 
-                <div class="centro">
-                    <div class="titulos">
-                        <p class="escenario" style="text-align: center; top: 0;">Escenario Musical</p>
-                        <h2 style="text-align: center;"></h2>
-                    </div>
-                    <div class="centro-mesas"></div>
-                </div>
-
-                <div class="general der">
-                    <h2 style="grid-column: 1 / -1; text-align: center;">General Derecha</h2>
-                </div>
-
-                <div class="footer">
-                    <div class="footer-izq">
-                    </div>
-                    <div class="footer-der">
-                    </div>
-                </div>
-                <button class="compra">
-                    <span>comprar</span>
-                </button>
+        <div class="main-container">
+            <div class="general izq">
+                <h2 style="grid-column: 1 / -1; text-align: center;">General Izquierda</h2>
             </div>
 
-            <div class="fondo-compra hidden">
-                <div class="confirma-compra">
+            <div class="centro">
+                <div class="titulos">
+                    <p class="escenario" style="text-align: center; top: 0;">Escenario Musical</p>
+                    <h2 style="text-align: center;"></h2>
+                </div>
+
+                <div class="centro-mesas"></div>
+            </div>
+
+            <div class="general der">
+                <h2 style="grid-column: 1 / -1; text-align: center;">General Derecha</h2>
+            </div>
+
+            <div class="footer">
+                <div class="footer-izq">
+                </div>
+                <div class="footer-der">
                 </div>
             </div>
+
+            <button id="inicio" type="button">
+                <span>volver al inicio</span>
+            </button>
+            <button class="compra">
+                <span>comprar</span>
+            </button>
         </div>
 
-        <script th:inline="javascript">
-            window.evento = [[${evento}]];
-        </script>
-        <script th:src="@{/js/trova.js}"></script>
-    </body>
+
+        <div class="fondo-compra hidden">
+            <div class="confirma-compra">
+            </div>
+            <form id="jsonform" method="POST" style="display:none;">
+                <input type="hidden" id="jsonData" name="jsonData">
+                <input type="submit">
+            </form>
+        </div>
+
+    </div>
+
+    <script th:inline="javascript">
+        window.evento = [[${evento}]];
+    </script>
+    <script th:src="@{/js/trova.js}"></script>
+</body>
 </html>
