WIP: ahora ya se puede observar el listado de reservaciones para un evento

--- a/src/main/resources/views/editarEvento.html
+++ b/src/main/resources/views/editarEvento.html
@@ -11,7 +11,7 @@
 
         <div class="nombre">
             <label>Nombre del Evento:</label>
-            <input type="text" id="nombre" th:value="${nombreEvento}" readonly="readonly">
+            <input type="text" id="nombre" th:value="${nombreEvento}">
         </div>
 
         <div class="fecha">
