--- a/src/main/resources/views/general.html
+++ b/src/main/resources/views/general.html
@@ -2,8 +2,8 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${evento.nombre}">[Nombre del Evento]</title>
-    <link rel="stylesheet" th:href="@{/css/baile.css}">
+    <title th:text="${evento.nombre}">Título del Evento</title>
+    <link rel="stylesheet" th:href="@{/css/general.css}">
 </head>
 <body>
     <div class="centrar">
@@ -11,7 +11,18 @@
             <p style="text-align: center; color: red;">Este sitio requiere JavaScript para funcionar correctamente.</p>
         </noscript>
 
-        <h1 th:text="${evento.nombre}">[Nombre del Evento]</h1>
+        <h1 th:text="${evento.nombre.toUpperCase()}"></h1>
+
+        <table id="tablaPrecios">
+            <thead>
+                <tr>
+                    <th>Tipo de Mesa</th>
+                    <th>Precio</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
 
         <div class="main-container">
             <div class="general izq">
@@ -20,7 +31,7 @@
 
             <div class="centro">
                 <div class="titulos">
-                    <p class="escenario" style="grid-column: 1 / -1; text-align: center; top: 0;">Escenario Musical</p>
+                    <p class="escenario" style="grid-column: 1 / -1; text-align: center; top: 0;"">Escenario Musical</p>
                     <h2 style="grid-column: 1 / -1; text-align: center;"></h2>
                 </div>
 
@@ -38,22 +49,27 @@
                 </div>
             </div>
 
+            <button id = 'inicio' type="button">
+                <span>volver al inicio</span>
+            </button>
+
             <button class = 'compra'>
                 <span>comprar</span>
             </button>
         </div>
 
-        <div class = "fondoCompra">
-        </div>
-        <div class="confirma-compra">
+        <div class = "fondo-compra hidden">
+            <div class="confirma-compra">
+            </div>
+            <form id="jsonform" method="POST" style="display:none;">
+                <input type="hidden" id="jsonData" name="jsonData">
+                <input type="submit">
+            </form>
         </div>
     </div>
     <script th:inline="javascript">
-        /*<![CDATA[*/
-        // Thymeleaf will automatically convert the 'evento' Java Map/Object into a JavaScript object.
-        window.evento = /*[[${evento}]]*/ {}; // The '{}' is a default value if 'evento' is null or not found.
-        /*]]>*/
+        window.evento = [[${evento}]];
     </script>
-    <script th:src="@{/js/baile.js}"></script>
+    <script th:src="@{/js/general.js}"></script>
 </body>
 </html>
