WIP: relocating files, and defining packages

--- a/src/main/resources/views/lista.html
+++ b/src/main/resources/views/lista.html
@@ -17,9 +17,9 @@
             <thead>
                 <tr>
                     <th>Nombre</th>
-                    <th>Teléfono</th>
+                    <th>Tel&eacute;fono</th>
                     <th>Boletos</th>
-                    <th>Código</th>
+                    <th>C&oacute;digo</th>
                 </tr>
             </thead>
             <tbody>
