WIP FIX: atributo html correctamente cerrado

--- a/src/main/resources/views/general.html
+++ b/src/main/resources/views/general.html
@@ -31,7 +31,7 @@
 
             <div class="centro">
                 <div class="titulos">
-                    <p class="escenario" style="grid-column: 1 / -1; text-align: center; top: 0;"">Escenario Musical</p>
+                    <p class="escenario" style="grid-column: 1 / -1; text-align: center; top: 0;">Escenario Musical</p>
                     <h2 style="grid-column: 1 / -1; text-align: center;"></h2>
                 </div>
 
